--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://volkanguneri.github.io/crowdfund",
+  "homepage": "http://volkanguneri.github.io/crowdfunding",
   "name": "crowdfund",
   "private": true,
   "version": "0.0.0",
